--- a/index.html
+++ b/index.html
@@ -1,64 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ReduxFlakes Experiments</title>
-  </head>
-  <body>
-    <header><h1>ReduxFlakes Experiments</h1></header>
-    <main>
-      <article>
-        <h2>Welcome</h2>
-        <p>
-          Hi, this is a place where I host projects that don't have any place to
-          go. This includes experimental stuff, dead projects, or other
-          websites.
-        </p>
-        <p>Go explore!</p>
-        <ul>
-          <li>
-            <a href=""><strong>Privacy & Security Tips</strong></a> - A website
-            with various tips and guides to improve your security and privacy in
-            the digital world, with software recommendations.
-          </li>
-          <li>
-            <a href=""><strong>App Directory</strong></a> - A directory of open
-            source, Android apps.
-          </li>
-          <li><em>More coming soon?</em></li>
-        </ul>
-      </article>
-    </main>
-    <footer>
-      &copy; 2024 <a href="https://reduxflakes.neocities.org">ReduxFlakes</a> -
-      <a href="https://github.com/ReduxFlakes/reduxflakes.github.io"
-        >Source Code (GitHub)</a
-      >
-    </footer>
-    <style>
-      :root {
-        font-size: 17px;
-        --clr-bg: #fbf9f1;
-        --clr-body: #1b2430;
-        --clr-link: hsl(224, 58%, 45%);
-      }
-      body {
-        font-size: 1rem;
-        max-width: 58ch;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-          sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-          "Noto Color Emoji";
-        background: var(--clr-bg);
-        color: var(--clr-body);
-      }
-      a {
-        color: var(--clr-link);
-      }
-      main {
-        text-align: justify;
-      }
-    </style>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ReduxFlakes Experiments</title>
+</head>
+
+<body>
+  <header>
+    <h1>ReduxFlakes Experiments</h1>
+  </header>
+  <main>
+    <article>
+      <h2>Welcome</h2>
+      <p>
+        Hi, this is a place where I host projects that don't have any place to
+        go. This includes experimental stuff, dead projects, or other
+        websites.
+      </p>
+      <p>Coming soon...</p>
+      <!-- <ul>
+        <li>
+          <a href=""><strong>Privacy & Security Tips</strong></a> - A website
+          with various tips and guides to improve your security and privacy in
+          the digital world, with software recommendations.
+        </li>
+        <li>
+          <a href=""><strong>App Directory</strong></a> - A directory of open
+          source, Android apps that I love.
+        </li>
+        <li><em>More coming soon?</em></li>
+      </ul> -->
+    </article>
+  </main>
+  <footer>
+    &copy; 2024 <a href="https://reduxflakes.neocities.org">ReduxFlakes</a> -
+    <a href="https://github.com/ReduxFlakes/reduxflakes.github.io">Source Code (GitHub)</a>
+  </footer>
+  <style>
+    :root {
+      --clr-bg: #fffdf5;
+      --clr-body: #242424;
+      --clr-link: hsl(224, 58%, 45%);
+    }
+
+    body {
+      font-size: 1rem;
+      max-width: 58ch;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+        "Noto Color Emoji";
+      background: var(--clr-bg);
+      color: var(--clr-body);
+    }
+
+    a {
+      color: var(--clr-link);
+    }
+  </style>
+</body>
+
 </html>
